--- a/cmake/OpenCMISSConfig.cmake.in
+++ b/cmake/OpenCMISSConfig.cmake.in
@@ -28,6 +28,7 @@ set(OpenCMISS_WITH_HYPRE @OpenCMISS_WITH_HYPRE@)
 set(OpenCMISS_WITH_MUMPS @OpenCMISS_WITH_MUMPS@)
 set(OpenCMISS_WITH_ParMETIS @OpenCMISS_WITH_ParMETIS@)
 set(OpenCMISS_WITH_PETSc @OpenCMISS_WITH_PETSc@)
+set(OpenCMISS_WITH_ScaLAPACK @OpenCMISS_WITH_ScaLAPACK@)
 set(OpenCMISS_WITH_SLEPc @OpenCMISS_WITH_SLEPc@)
 set(OpenCMISS_WITH_SUNDIALS @OpenCMISS_WITH_SUNDIALS@)
 
@@ -76,6 +77,10 @@ endif()
 if(OpenCMISS_WITH_PETSc)
   set(OpenCMISS_PETSc_VERSION "@OpenCMISS_PETSc_VERSION@")
   find_dependency(PETSc "${OpenCMISS_PETSc_VERSION}" REQUIRED)
+endif()
+if(OpenCMISS_WITH_ScaLAPACK)
+  set(OpenCMISS_ScaLAPACK_VERSION "@OpenCMISS_ScaLAPACK_VERSION@")
+  find_dependency(ScaLAPACK "${OpenCMISS_ScaLAPACK_VERSION}" REQUIRED)
 endif()
 if(OpenCMISS_WITH_SLEPc)
   set(OpenCMISS_SLEPc_VERSION "@OpenCMISS_SLEPc_VERSION@")
