Update before import

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,7 +61,21 @@ if(OpenCMISS_HAVE_MULTICONFIG_ENV)
 else()
   string(TOUPPER "${CMAKE_BUILD_TYPE}" OpenCMISS_CONFIG_TYPE)
 endif()
-IF(OpenCMISS_CONFIG_TYPE MATCHES "^(DEBUG|RELWITHDEBINFO)")
+
+set(OpenCMISS_DEBUG_BUILD OFF)
+set(OpenCMISS_RELWITHDEBINFO_BUILD OFF)
+set(OpenCMISS_RELEASE_BUILD OFF)
+set(OpenCMISS_UNKNOWN_BUILD ON)
+
+if(OpenCMISS_CONFIG_TYPE MATCHES "^(DEBUG)")
+  set(OpenCMISS_DEBUG_BUILD ON)
+elseif(OpenCMISS_CONFIG_TYPE MATCHES "^(RELWITHDEBINFO)")
+  set(OpenCMISS_RELWITHDEBINFO_BUILD ON)    
+elseif(OpenCMISS_CONFIG_TYPE MATCHES "^(RELEASE)")
+  set(OpenCMISS_RELEASE_BUILD ON)    
+endif()
+
+if(OpenCMISS_DEBUG_BUILD OR OpenCMISS_RELWITHDEBINFO_BUILD)
   set(OpenCMISS_DEBUG_INFO_BUILD ON)
 else()
   set(OpenCMISS_DEBUG_INFO_BUILD OFF)
@@ -110,52 +124,75 @@ option(OpenCMISS_WITH_MPI "Build OpenCMISS with MPI support." ON)
 option(OpenCMISS_WITH_OpenMP "Build OpenCMISS with OpenMP support." ON)
 option(OpenCMISS_WITH_CUDA "Build OpenCMISS with CUDA support." ON)
 
-# Options for diagnostics, checking, profiling etc. 
-if(NOT DEFINED OpenCMISS_WITH_DIAGNOSTICS)
-  if(OpenCMISS_DEBUG_INFO_BUILD)
-    set(OpenCMISS_WITH_DIAGNOSTICS ON)
-  else()
-    set(OpenCMISS_WITH_DIAGNOSTICS OFF)
-  endif()
-else()
-  set(OpenCMISS_WITH_DIAGNOSTICS ${OpenCMISS_WITH_DIAGNOSTICS})
-endif()
-if(DEFINED OpenCMISS_IS_DEBUG_BUILD)
-  option(OpenCMISS_WITH_DIAGNOSTICS "Build OpenCMISS with diagnostics support." ON)
-else()
-  option(OpenCMISS_WITH_DIAGNOSTICS "Build OpenCMISS with diagnostics support." OFF)
-endif()
-if(NOT DEFINED OpenCMISS_WITH_NO_CHECKS)
-  set(OpenCMISS_WITH_NO_CHECKS OFF)
-else()
-  set(OpenCMISS_WITH_NO_CHECKS ${OpenCMISS_WITH_NO_CHECKS})
-endif()
-option(OpenCMISS_WITH_NO_CHECKS "Build OpenCMISS with no pre- or post-checks" OFF)
-if(NOT DEFINED OpenCMISS_WITH_NO_PRECHECKS)
-  set(OpenCMISS_WITH_NO_PRECHECKS OFF)
-else()
-  set(OpenCMISS_WITH_NO_PRECHECKS ${OpenCMISS_WITH_NO_PRECHECKS})
-endif()
-option(OpenCMISS_WITH_NO_PRECHECKS "Build OpenCMISS with no pre-checks" OFF)
-if(NOT DEFINED OpenCMISS_WITH_NO_POSTCHECKS)
-  set(OpenCMISS_WITH_NO_POSTCHECKS OFF)
-else()
-  set(OpenCMISS_WITH_NO_POSTCHECKS ${OpenCMISS_WITH_NO_POSTCHECKS})
-endif()
-option(OpenCMISS_WITH_NO_POSTCHECKS "Build OpenCMISS with no post-checks." OFF)
+# Options for diagnostics, checking, profiling etc.
+#if(NOT DEFINED OpenCMISS_WITH_DIAGNOSTICS)
+#  if(OpenCMISS_DEBUG_INFO_BUILD)
+#    set(OpenCMISS_WITH_DIAGNOSTICS ON)
+#  else()
+#    set(OpenCMISS_WITH_DIAGNOSTICS OFF)
+#  endif()
+#else()
+#  set(OpenCMISS_WITH_DIAGNOSTICS ${OpenCMISS_WITH_DIAGNOSTICS})
+#endif()
+#if(DEFINED OpenCMISS_IS_DEBUG_BUILD)
+#  option(OpenCMISS_WITH_DIAGNOSTICS "Build OpenCMISS with diagnostics support." ON)
+#else()
+#  option(OpenCMISS_WITH_DIAGNOSTICS "Build OpenCMISS with diagnostics support." OFF)
+#endif()
+#if(NOT DEFINED OpenCMISS_WITH_NO_CHECKS)
+#  set(OpenCMISS_WITH_NO_CHECKS OFF)
+#else()
+#  set(OpenCMISS_WITH_NO_CHECKS ${OpenCMISS_WITH_NO_CHECKS})
+#endif()
+#option(OpenCMISS_WITH_NO_CHECKS "Build OpenCMISS with no pre- or post-checks" ON)
+#if(NOT DEFINED OpenCMISS_WITH_NO_PRECHECKS)
+#  set(OpenCMISS_WITH_NO_PRECHECKS OFF)
+#else()
+#  set(OpenCMISS_WITH_NO_PRECHECKS ${OpenCMISS_WITH_NO_PRECHECKS})
+#endif()
+#option(OpenCMISS_WITH_NO_PRECHECKS "Build OpenCMISS with no pre-checks" OFF)
+#if(NOT DEFINED OpenCMISS_WITH_NO_POSTCHECKS)
+#  set(OpenCMISS_WITH_NO_POSTCHECKS OFF)
+#else()
+#  set(OpenCMISS_WITH_NO_POSTCHECKS ${OpenCMISS_WITH_NO_POSTCHECKS})
+#endif()
+#option(OpenCMISS_WITH_NO_POSTCHECKS "Build OpenCMISS with no post-checks." OFF)
 
 # Options for compiling
-if(NOT DEFINED OpenCMISS_WITH_CHECK_ALL)
-  if(OpenCMISS_FULL_DEBUG_BUILD)
-    set(OpenCMISS_WITH_CHECK_ALL ON)
-  else()
-    set(OpenCMISS_WITH_CHECK_ALL OFF)
-  endif()
-else()
-  set(OpenCMISS_WITH_CHECK_ALL ${OpenCMISS_WITH_CHECK_ALL})
-endif()
+#if(NOT DEFINED OpenCMISS_WITH_CHECK_ALL)
+#  if(OpenCMISS_FULL_DEBUG_BUILD)
+#    set(OpenCMISS_WITH_CHECK_ALL ON)
+#  else()
+#    set(OpenCMISS_WITH_CHECK_ALL OFF)
+#  endif()
+#else()
+#  set(OpenCMISS_WITH_CHECK_ALL ${OpenCMISS_WITH_CHECK_ALL})
+#endif()
 #option(OpenCMISS_WITH_CHECK_ALL "Build OpenCMISS with all checks enabled." ${OpenCMISS_WITH_CHECK_ALL})
-option(OpenCMISS_WITH_CHECK_ALL "Build OpenCMISS with all checks enabled." ON)
+
+if(OpenCMISS_DEBUG_BUILD)
+  option(OpenCMISS_WITH_DIAGNOSTICS "Build OpenCMISS with diagnostics support." ON)
+  option(OpenCMISS_WITH_NO_CHECKS "Build OpenCMISS with no pre- or post-checks" OFF)
+  option(OpenCMISS_WITH_CHECK_ALL "Build OpenCMISS with all checks enabled." ON)
+elseif(OpenCMISS_RELWITHDEBINFO_BUILD)
+  option(OpenCMISS_WITH_DIAGNOSTICS "Build OpenCMISS with diagnostics support." ON)
+  option(OpenCMISS_WITH_NO_CHECKS "Build OpenCMISS with no pre- or post-checks" OFF)
+  option(OpenCMISS_WITH_CHECK_ALL "Build OpenCMISS with all checks enabled." OFF)
+elseif(OpenCMISS_RELEASE_BUILD)
+  option(OpenCMISS_WITH_DIAGNOSTICS "Build OpenCMISS with diagnostics support." OFF)
+  option(OpenCMISS_WITH_NO_CHECKS "Build OpenCMISS with no pre- or post-checks" ON)
+  option(OpenCMISS_WITH_CHECK_ALL "Build OpenCMISS with all checks enabled." OFF)
+else()
+  option(OpenCMISS_WITH_DIAGNOSTICS "Build OpenCMISS with diagnostics support." ON)
+  option(OpenCMISS_WITH_NO_CHECKS "Build OpenCMISS with no pre- or post-checks" OFF)
+  option(OpenCMISS_WITH_CHECK_ALL "Build OpenCMISS with all checks enabled." ON)
+endif()
+
+if(NOT OpenCMISS_WITH_NO_CHECKS)
+  option(OpenCMISS_WITH_NO_PRECHECKS "Build OpenCMISS with no pre-checks" OFF)
+  option(OpenCMISS_WITH_NO_POSTCHECKS "Build OpenCMISS with no post-checks" OFF)
+endif()
+
 option(OpenCMISS_WITH_WARN_ALL "Build OpenCMISS with all warnings enabled." ON)
 option(OpenCMISS_WITH_PROFILING "Build OpenCMISS with profiling enbabled." OFF)
 
@@ -337,14 +374,14 @@ if(CMAKE_C_COMPILER_ID STREQUAL "IntelLLVM")
   add_compile_options( "$<$<AND:$<COMPILE_LANGUAGE:C>,$<OR:$<CONFIG:Debug>,$<CONFIG:RelWithDebInfo>>>:-debug>" )
   add_compile_options( "$<$<AND:$<COMPILE_LANGUAGE:C>,$<BOOL:${OpenCMISS_WITH_OpenMP}>>:-fopenmp>" )
   add_compile_options( "$<$<AND:$<COMPILE_LANGUAGE:C>,$<BOOL:${OpenCMISS_WITH_WARN_ALL}>>:-Wall>" )
-  add_compile_options( "$<$<AND:$<COMPILE_LANGUAGE:C>,$<BOOL:${OpenCMISS_WITH_CHECK_ALL}>>:-check;all,nouninit>" )
-  add_compile_options( "$<$<AND:$<COMPILE_LANGUAGE:C>,$<CONFIG:Release>>:-fast>" )
+  add_compile_options( "$<$<AND:$<COMPILE_LANGUAGE:C>,$<BOOL:${OpenCMISS_WITH_CHECK_ALL}>>:-fstack-protector-all;-fstack-security-check>" )
+  add_compile_options( "$<$<AND:$<COMPILE_LANGUAGE:C>,$<CONFIG:Release>>:-O3>" )
   add_compile_options( "$<$<AND:$<COMPILE_LANGUAGE:C>,$<CONFIG:Debug>>:-O0>" )
 elseif(CMAKE_C_COMPILER_ID STREQUAL "GNU")
   add_compile_options( "$<$<AND:$<COMPILE_LANGUAGE:C>,$<OR:$<CONFIG:Debug>,$<CONFIG:RelWithDebInfo>>>:-g>" )
   add_compile_options( "$<$<AND:$<COMPILE_LANGUAGE:C>,$<BOOL:${OpenCMISS_WITH_OpenMP}>>:-fopenmp>" )
   add_compile_options( "$<$<AND:$<COMPILE_LANGUAGE:C>,$<BOOL:${OpenCMISS_WITH_WARN_ALL}>>:-Wall>" )
-  add_compile_options( "$<$<AND:$<COMPILE_LANGUAGE:C>,$<CONFIG:Release>>:-Ofast>" )
+  add_compile_options( "$<$<AND:$<COMPILE_LANGUAGE:C>,$<CONFIG:Release>>:-O2>" )
   add_compile_options( "$<$<AND:$<COMPILE_LANGUAGE:C>,$<CONFIG:Debug>>:-O0>" )
 elseif(CMAKE_C_COMPILER_ID STREQUAL "Clang")
 endif()
@@ -355,16 +392,18 @@ if(CMAKE_Fortran_COMPILER_ID STREQUAL "IntelLLVM")
   add_compile_options( "$<$<AND:$<COMPILE_LANGUAGE:Fortran>,$<OR:$<CONFIG:Debug>,$<CONFIG:RelWitDebInfo>>>:-debug>" )
   add_compile_options( "$<$<AND:$<COMPILE_LANGUAGE:Fortran>,$<BOOL:${OpenCMISS_WITH_OpenMP}>>:-fopenmp>" )
   add_compile_options( "$<$<AND:$<COMPILE_LANGUAGE:Fortran>,$<BOOL:${OpenCMISS_WITH_WARN_ALL}>>:-warn;all>" )
-  add_compile_options( "$<$<AND:$<COMPILE_LANGUAGE:Fortran>,$<BOOL:${OpenCMISS_WITH_CHECK_ALL}>>:-check;all,nouninit;-fsanitize=address>" )
-  add_compile_options( "$<$<AND:$<COMPILE_LANGUAGE:Fortran>,$<CONFIG:Release>>:-fast>" )
+  #add_compile_options( "$<$<AND:$<COMPILE_LANGUAGE:Fortran>,$<BOOL:${OpenCMISS_WITH_CHECK_ALL}>>:-check;all,nouninit;-fsanitize=address>" )
+  add_compile_options( "$<$<AND:$<COMPILE_LANGUAGE:Fortran>,$<BOOL:${OpenCMISS_WITH_CHECK_ALL}>>:-check;all,nouninit>" )
+  add_compile_options( "$<$<AND:$<COMPILE_LANGUAGE:Fortran>,$<CONFIG:Release>>:-O3>" )
   add_compile_options( "$<$<AND:$<COMPILE_LANGUAGE:Fortran>,$<CONFIG:Debug>>:-O0>" )
   add_compile_options( "$<$<AND:$<COMPILE_LANGUAGE:Fortran>,$<CONFIG:Debug>>:-O0>" )
+  #add_link_options( "$<$<AND:$<COMPILE_LANGUAGE:Fortran>,$<BOOL:${OpenCMISS_WITH_CHECK_ALL}>>:-fsanitize=address>" )
 elseif(CMAKE_Fortran_COMPILER_ID STREQUAL "GNU")
   add_compile_options( "$<$<COMPILE_LANGUAGE:Fortran>:-fbacktrace>" )
   add_compile_options( "$<$<AND:$<COMPILE_LANGUAGE:Fortran>,$<BOOL:${OpenCMISS_WITH_OpenMP}>>:-fopenmp>" )
   add_compile_options( "$<$<AND:$<COMPILE_LANGUAGE:Fortran>,$<BOOL:${OpenCMISS_WITH_WARN_ALL}>>:-Wall>" )
   add_compile_options( "$<$<AND:$<COMPILE_LANGUAGE:Fortran>,$<BOOL:${OpenCMISS_WITH_CHECK_ALL}>>:-fcheck=all;-ffpe-trap=invalid,zero,overflow>" )
-  add_compile_options( "$<$<AND:$<COMPILE_LANGUAGE:Fortran>,$<CONFIG:Release>>:-Ofast>" )
+  add_compile_options( "$<$<AND:$<COMPILE_LANGUAGE:Fortran>,$<CONFIG:Release>>:-O3>" )
   add_compile_options( "$<$<AND:$<COMPILE_LANGUAGE:Fortran>,$<CONFIG:Debug>>:-O0>" )
 elseif(CMAKE_Fortran_COMPILER_ID STREQUAL "Flang")
 endif()
@@ -427,6 +466,9 @@ if(MSVC)
   if(OpenCMISS_BUILD_SHARED_LIBRARIES)
     add_library(${OpenCMISS_SHARED_Fortran_TARGET} SHARED ${OpenCMISS_Fortran_SOURCES})
     add_library(${OpenCMISS_SHARED_Fortran_C_TARGET} SHARED ${OpenCMISS_Fortran_C_SOURCES})
+    set_target_properties(${OpenCMISS_SHARED_Fortran_TARGET} PROPERTIES
+      LINKER_LANGUAGE CXX
+    )
     target_link_libraries(${OpenCMISS_SHARED_Fortran_TARGET} PRIVATE ${OpenCMISS_SHARED_Fortran_C_TARGET})
     list(APPEND OpenCMISS_Fortran_TARGETS ${OpenCMISS_SHARED_Fortran_TARGET} ${OpenCMISS_SHARED_Fortran_C_TARGET})
   endif()
@@ -444,6 +486,9 @@ else()
   if(OpenCMISS_BUILD_SHARED_LIBRARIES)
     message(STATUS "Adding library target ${OpenCMISS_SHARED_Fortran_TARGET}...")
     add_library(${OpenCMISS_SHARED_Fortran_TARGET} SHARED ${OpenCMISS_SOURCES})
+    set_target_properties(${OpenCMISS_SHARED_Fortran_TARGET} PROPERTIES
+      LINKER_LANGUAGE CXX
+    )
     target_sources(${OpenCMISS_SHARED_Fortran_TARGET} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src/opencmiss.F90)
     get_target_property(sourcefiles ${OpenCMISS_SHARED_Fortran_TARGET} SOURCES)
     list(APPEND OpenCMISS_Fortran_TARGETS ${OpenCMISS_SHARED_Fortran_TARGET})
