Adding export routines.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -706,6 +706,7 @@ if(OpenCMISS_WITH_Python_BINDINGS)
   list(APPEND OpenCMISS_CLEANUP_FILES "${OpenCMISS_OPENCMISS_PYTHON_PY}" "${OpenCMISS_OPENCMISS_GENERATED_I} ${OpenCMISS_OPENCMISS_Python_WRAPPER_C}")
   file(MAKE_DIRECTORY "${OpenCMISS_GEN_BINDINGS_Python_SWIG_WRAPPER_DIR}")
   include(UseSWIG)
+  set_property(SOURCE ${OpenCMISS_OPENCMISS_I} PROPERTY DEPENDS ${OpenCMISS_SRC_DIR}/opencmiss.F90)
   swig_add_library(${OpenCMISS_Python_MODULE_TARGET}
     TYPE SHARED
     LANGUAGE python
